change email verification & registration scheme
