# app/domains/users/actions/auth/email/auth.email.router.js
@@ -3,9 +3,10 @@ const emailAuthRouter = express.Router();
 
 const emailAuthController = require('./auth.email.controller');
 
-emailAuthRouter.post('/login', emailAuthController.login);
+emailAuthRouter.post('/verify', emailAuthController.verify);
 emailAuthRouter.post('/register', emailAuthController.register);
 emailAuthRouter.get('/activate', emailAuthController.activate);
 emailAuthRouter.get('/activation', emailAuthController.activation);
+emailAuthRouter.post('/login', emailAuthController.login);
 
 module.exports = emailAuthRouter;
